--- a/scss/import/_header.scss
+++ b/scss/import/_header.scss
@@ -1,45 +1,44 @@
 header.header {
 	width: 100%;
-	font-family: 'BebasNeue-Book', sans-serif;
-		.logo{
-			display: inline-block;
-			width: 30%;
-				a{
-					color: $color-white;
-					text-decoration: none;
-						h1{
-							font-size: 3em;
-							margin: .5em 0;
-						}
-				}
-		}
-		nav.nav{
-			width: 69%;
+	display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 1.25em;
+   box-sizing: border-box;
+	
+	.logo {
+		max-width: 400px;
+	}
+	
+	nav.nav {
+		padding: 0;
+		margin: 0;
+		
+		ul {
 			padding: 0;
-			margin: 0;
-			display: inline-block;
-				ul#main-menu{
-					padding: 0;
+			text-align: right;
+			display: flex;
+			
+			li {
+				list-style: none;
+				margin: 0 0 0 2em;
+				text-align: right;
+								
+				a {
+					padding: 0.25em;
+					color: $color-gray;
+					text-decoration: none;
 					text-align: right;
-					margin: -1% 0 0 0;
-						li{
-							list-style: none;
-							display: inline-block;
-							padding: 0;
-							margin-left: 2em;
-							text-align: right;
-								a{
-									color: $color-white;
-									text-decoration: none;
-									text-align: right;
-									font-size: 22px;
-								}
-								a:hover{
-									text-decoration: underline;
-								}        
-						}
+					font-size: 20px;
+					
+					&:hover,
+					&:focus {
+						border-bottom: 3px solid $color-orange;
+					}        
 				}
+			}
 		}
+
 		.mobile-menu{
 			display: none;
 			background-image: url(img/mobile_menu.png);
@@ -52,77 +51,57 @@ header.header {
 					background-position: 100% 0; 
 				}
 		}
-		&:after{
+		&:after {
 	  		content: "";
 	  		display: table;
 	  		clear: both;
 		}
 }
 
-.descript{
-	font-family: 'BebasNeue-Book', sans-serif;
-	width: 62%;
-	margin: 0 0 2em 0;
-	font-size: 18px;
-	color: $color-white;
-}
 
-@media (max-width: $h-tablet){
-	.descript{
-		width: 50%;
-	}	
-}
-
-@media (max-width: $tablet){
-	.descript{
-		width: 100%;
-	}
-}
-
-@media (max-width: $h-mobile){
-	header.header{
-		padding: .2em 0 0.8em 0;
-		height: auto;
-		min-height: 100px;
-			.logo{
-				width: 60%;
-					a{
-							h1{
-								    font-size: 2.5em;
-    								margin: 0.3em 0;
-							}
-					}
-
-			}
-			.mobile-menu{
-				display: block;
-				float: right;
-			}
-			nav.nav{
-				width: 100%;
-				display: none;
-				margin: 0;
-				overflow: hidden;
-					ul#main-menu{
-						position: relative;		
-						left: 0;
-						margin: 4% 0;
-							li{
-								display: block;
-								padding: 0.2em 0;
-								line-height: 1.3;
-								text-align: center;
-								width: auto;
-								margin: 0;
-
-								a { 
-									font-size: 1.6em;
+	@media (max-width: $h-mobile){
+		header.header{
+			padding: .2em 0 0.8em 0;
+			height: auto;
+			min-height: 100px;
+				.logo{
+					width: 60%;
+						a{
+								h1{
+									    font-size: 2.5em;
+	    								margin: 0.3em 0;
 								}
-							}
-					}
-			}
+						}
+
+				}
+				.mobile-menu{
+					display: block;
+					float: right;
+				}
+				nav.nav{
+					width: 100%;
+					display: none;
+					margin: 0;
+					overflow: hidden;
+						ul#main-menu{
+							position: relative;		
+							left: 0;
+							margin: 4% 0;
+								li{
+									display: block;
+									padding: 0.2em 0;
+									line-height: 1.3;
+									text-align: center;
+									width: auto;
+									margin: 0;
+
+									a { 
+										font-size: 1.6em;
+									}
+								}
+						}
+				}
+		}
 	}
-	.descript{
-		width: 100%;
-	}
+
 }
