--- a/scss/import/_inspiration.scss
+++ b/scss/import/_inspiration.scss
@@ -1,33 +1,35 @@
-.container{
-	width: 94%;
-	padding: 3%;
-	margin: auto;
-	background-color: $color-white;
-	color: $color-gray;
-	min-height:700px;
-		.newsfeed{
-			width: 73%;
-			display: inline-block;
-				.newspost{
-					width: 31%;
-					margin-right:1.5%;
-					display: inline-block;
-						.bild{
-							width: 100%;
-							height: 200px;
-							background-color: gray;
-						}
-						span.date{
-						    margin: -50px 0 15px -5px;
+.inspiration {
+	display: flex;
+   flex-wrap: wrap;
+   margin: 0 -0.5em;
+	
+	&__article {
+		flex: 1 1 33.333%;
+   	flex-basis: calc(33.333% - 20px);
+   	overflow: hidden;
+   	position: relative;
+   	width: 100%;
+   	margin: 0 .5em 1em;
+   	-webkit-transition: all 0.3s ease-in-out;
+			-moz-transition: all 0.3s ease-in-out;
+			  -o-transition: all 0.3s ease-in-out;
+				  transition: all 0.3s ease-in-out;
+
+		&__img {
+			max-height: 300px;
+			overflow: hidden;
+		}
+	}
+
+	span.date {
+		margin: -50px 0 15px -5px;
 						    background-color: #497849;
 						    color: #fff;
 						    padding: 0.4% 1%;
 						    font-size: 14px;
 						    position: absolute;
-						}
-				}
-		}
-		h1.title{
+	}
+	h1.title{
 			font-size: 3em;
 			margin: .1em 0 .2em;
 			width: 100%;
@@ -37,7 +39,7 @@
 			text-decoration: none;
 			transition: 100ms all ease-in;
 		}
-		.pagination{
+		.pagination {
 			text-align: center;
 				.page-numbers{
 					background-color: $color-green;
@@ -49,8 +51,7 @@
 					font-weight: 700;
 				}
 
-		}
-}
+	}
 
 @media (max-width: $h-tablet){
 	.container{
@@ -79,4 +80,6 @@
 					}
 			}
 	}
+}
+
 }
