--- a/scss/import/_typography.scss
+++ b/scss/import/_typography.scss
@@ -1,27 +1,47 @@
 @font-face {
-	font-family:'BebasNeue-Book';
-	src: url('fonts/bebasneuebook.eot');
-	src: url('fonts/bebasneuebook.eot?#iefix') format('embedded-opentype'),
-		url('fonts/bebasneuebook.woff') format('woff'),
-		url('fonts/bebasneuebook.ttf') format('truetype'),
-		url('fonts/bebasneuebook.svg#BebasNeue-Book') format('svg');
-	font-weight: 400;
-	font-style: normal;
-	font-stretch: normal;
+	font-family: 'VAGrounded';
+   src: url('fonts/vagrounded.eot');
+   src: url('fonts/vagrounded.eot?#iefix') format('embedded-opentype'),
+        url('fonts/vagrounded.woff2') format('woff2'),
+        url('fonts/vagrounded.woff') format('woff'),
+        url('fonts/vagrounded.ttf') format('truetype'),
+        url('fonts/vagrounded.svg#vagrounded') format('svg');
+   font-weight: normal;
+   font-style: normal;
 }
 
-body{
-	font-family: 'Lato', sans-serif;
+body {
+	font-family: 'Raleway', sans-serif;
 	font-weight: 300;
-		h1, h2, h3, .date, .category, .comments, .reply, #submit, .page-numbers{
-			font-family: 'BebasNeue-Book', sans-serif;
-		}
-		a{
-			text-decoration: none;
-			-webkit-transition: .3s ease-in-out;
-							transition: .3s ease-in-out;
-		}
-		a:hover{
+	color: $color-gray;
+	font-size: 1em;
+	line-height: 1.4;
+	
+	h1 {
+		font-size: 40px;
+		font-family: 'VAGrounded', sans-serif;
+		color: $color-green;
+	}
+
+	h2 {
+		font-size: 30px;
+	}
+
+	h3 {
+		font-size: 25px;
+	}
+
+	p.ingress {
+		font-size: 20px;
+	}
+	
+	a {
+		text-decoration: none;
+		-webkit-transition: .3s ease-in-out;
+				  transition: .3s ease-in-out;
+
+		&:hover{
 			text-decoration: underline;
 		}
+	}
 }
