--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,21 +22,23 @@ $mobile: 350px;
 @import "import/typography";
 @import "import/header";
 @import "import/footer";
-@import "import/newsfeedpage";
-@import "import/singlepage";
-@import "import/sidebar";
+@import "import/inspiration";
+@import "import/single";
 
 body {
-	background: $color-white;
-	color: $color-gray;
-	line-height: 1.4;
-	font-size: 16px;
 	margin: 0;
+	background: $color-white;
 
-		.wrapper{
-			max-width: 1280px;
-			width: 100%;
-			margin: auto;
+	.container {
+		max-width: 1280px;
+		width: 100%;
+		margin: 0 auto;
+		box-sizing: border-box;
+
+		@media (max-width: 1280px){
+			padding: 0 1.25em;
 		}
+
+	}
 
 }
