--- a/scss/import/_typography.scss
+++ b/scss/import/_typography.scss
@@ -18,7 +18,8 @@ body {
 	line-height: 1.4;
 	
 	h1 {
-		font-size: 40px;
+		margin: 0.5em 0;
+		font-size: 2.5rem;
 		font-family: 'VAGrounded', sans-serif;
 		color: $color-green;
 	}
