--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {
   font-size: 1em;
   line-height: 1.4; }
   body h1 {
-    font-size: 40px;
+    margin: 0.5em 0;
+    font-size: 2.5rem;
     font-family: 'VAGrounded', sans-serif;
     color: #00a651; }
   body h2 {
@@ -37,111 +38,89 @@ body {
     body a:hover {
       text-decoration: underline; }
 
-header.header {
+.header {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.25em;
+  padding: 1.25em 2.5em;
   box-sizing: border-box; }
-  header.header .logo {
+  .header__logo {
     max-width: 400px; }
-  header.header nav.nav {
+    .header__logo a {
+      color: #00a651; }
+      .header__logo a h1 {
+        letter-spacing: 0.05em; }
+  .header .nav__desktop {
     padding: 0;
     margin: 0; }
-    header.header nav.nav ul {
+    .header .nav__desktop__toggle {
+      display: none;
+      font-size: 22px; }
+    .header .nav__desktop__social li {
+      list-style: none;
+      text-align: right;
+      padding: 0 0.25em; }
+    .header .nav__desktop__main ul {
       padding: 0;
       text-align: right;
       display: flex; }
-      header.header nav.nav ul li {
+      .header .nav__desktop__main ul li {
         list-style: none;
-        margin: 0 0 0 2em;
-        text-align: right; }
-        header.header nav.nav ul li a {
+        text-align: right;
+        padding: 0 0.25em; }
+        .header .nav__desktop__main ul li a {
           padding: 0.25em;
-          color: #333333;
+          font-family: 'VAGrounded', sans-serif;
+          color: #00a651;
           text-decoration: none;
           text-align: right;
-          font-size: 20px; }
-          header.header nav.nav ul li a:hover, header.header nav.nav ul li a:focus {
+          font-size: 22px;
+          border-bottom: 3px solid transparent; }
+          .header .nav__desktop__main ul li a:hover, .header .nav__desktop__main ul li a:focus {
             border-bottom: 3px solid #ff5f00; }
-    header.header nav.nav .mobile-menu {
-      display: none;
-      background-image: url(img/mobile_menu.png);
-      background-size: 200% 100%;
-      background-repeat: no-repeat;
-      width: 37.5px;
-      height: 30px;
-      margin-top: 1.5em; }
-      header.header nav.nav .mobile-menu.active {
-        background-position: 100% 0; }
-    header.header nav.nav:after {
-      content: "";
-      display: table;
-      clear: both; }
   @media (max-width: 700px) {
-    header.header header.header {
+    .header header.header {
       padding: .2em 0 0.8em 0;
       height: auto;
       min-height: 100px; }
-      header.header header.header .logo {
+      .header header.header .logo {
         width: 60%; }
-        header.header header.header .logo a h1 {
+        .header header.header .logo a h1 {
           font-size: 2.5em;
           margin: 0.3em 0; }
-      header.header header.header .mobile-menu {
+      .header header.header .mobile-menu {
         display: block;
         float: right; }
-      header.header header.header nav.nav {
+      .header header.header nav.nav {
         width: 100%;
         display: none;
         margin: 0;
         overflow: hidden; }
-        header.header header.header nav.nav ul#main-menu {
+        .header header.header nav.nav ul#main-menu {
           position: relative;
           left: 0;
           margin: 4% 0; }
-          header.header header.header nav.nav ul#main-menu li {
+          .header header.header nav.nav ul#main-menu li {
             display: block;
             padding: 0.2em 0;
             line-height: 1.3;
             text-align: center;
             width: auto;
             margin: 0; }
-            header.header header.header nav.nav ul#main-menu li a {
+            .header header.header nav.nav ul#main-menu li a {
               font-size: 1.6em; } }
 
-footer.footer {
-  display: inline-block;
+.footer {
   width: 100%;
-  font-family: 'BebasNeue-Book', sans-serif;
-  color: #fff; }
-  footer.footer .copy {
-    width: 49.5%;
-    float: left; }
-    footer.footer .copy p.copyright {
-      margin: 4.5% 0; }
-  footer.footer .socialmedia {
-    width: 50%;
-    text-align: right;
-    padding: 2% 0;
-    display: inline-block; }
-    footer.footer .socialmedia a {
-      color: #fff; }
-      footer.footer .socialmedia a .fa-instagram, footer.footer .socialmedia a .fa-facebook-official {
-        font-size: 2em;
-        margin-left: 4%; }
-  footer.footer input.search {
-    display: none;
-    width: 100%;
-    box-shadow: none;
-    border-radius: 5px;
-    min-height: 40px;
-    border: none;
-    background-color: #fff;
-    font-size: 18px;
-    letter-spacing: 1px;
-    font-family: 'BebasNeue-Book', sans-serif; }
+  text-align: center;
+  padding: 1em 0; }
+  .footer__copy a {
+    color: #333333; }
+
+@media all and (max-width: 1280px) {
+  header.header {
+    padding: 1.2em; } }
 
 .inspirationWrap {
   text-align: center; }
@@ -151,11 +130,11 @@ footer.footer {
     margin: 0 -0.5em; }
     .inspirationWrap .inspiration__article {
       flex: 1 1 25%;
-      flex-basis: calc(25% - 20px);
+      flex-basis: calc(25% - 24px);
       overflow: hidden;
       position: relative;
       width: 100%;
-      margin: 0 .5em 1em;
+      margin: 0 0.75em 1em;
       -webkit-transition: all 0.3s ease-in-out;
       -moz-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
@@ -163,11 +142,15 @@ footer.footer {
       .inspirationWrap .inspiration__article__img {
         max-height: 300px;
         overflow: hidden; }
+        .inspirationWrap .inspiration__article__img img {
+          width: 150%;
+          height: auto; }
       .inspirationWrap .inspiration__article h2 {
         margin: .1em 0 .2em;
         width: 100%;
         font-size: 20px;
-        font-family: 'VAGrounded'; }
+        font-family: 'VAGrounded';
+        text-align: left; }
       .inspirationWrap .inspiration__article a {
         color: #333333;
         text-decoration: none;
@@ -178,6 +161,53 @@ footer.footer {
       padding: .5% 1%; }
     .inspirationWrap .pagination .current {
       font-weight: 700; }
+
+@media all and (max-width: 1024px) {
+  .inspirationWrap .inspiration__article {
+    flex: 1 1 33%;
+    flex-basis: calc(33% - 24px); } }
+
+@media all and (max-width: 768px) {
+  .inspirationWrap .inspiration__article {
+    flex: 1 1 50%;
+    flex-basis: calc(50% - 24px); }
+    .inspirationWrap .inspiration__article__img img {
+      width: 125%; } }
+
+@media all and (max-width: 600px) {
+  .inspirationWrap .inspiration__article {
+    flex: 1 1 100%;
+    flex-basis: calc(100%); }
+    .inspirationWrap .inspiration__article__img img {
+      width: 100%; } }
+
+.page__img {
+  overflow: hidden;
+  max-height: 600px; }
+  .page__img img {
+    width: 100%;
+    height: auto; }
+
+.page__txt {
+  margin: 0 auto;
+  max-width: 700px;
+  width: 100%; }
+  .page__txt h1 {
+    text-align: center; }
+
+.single__img {
+  overflow: hidden;
+  max-height: 600px; }
+  .single__img img {
+    width: 100%;
+    height: auto; }
+
+.single__txt {
+  margin: 0 auto;
+  max-width: 700px;
+  width: 100%; }
+  .single__txt h1 {
+    text-align: center; }
 
 .container h1.title {
   font-size: 3em;
