--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,7 @@ $mobile: 350px;
 @import "import/base";
 @import "import/inspiration";
 @import "import/service";
+@import "import/start";
 @import "import/single";
 
 body {
