--- a/scss/import/_service.scss
+++ b/scss/import/_service.scss
@@ -1,3 +1,165 @@
 //
 // Styling for the page 'Tjänster' (Services)
 //
+
+.service {
+	text-align: center;
+	
+	&__postwrapper {
+		display: flex;
+		flex-wrap: wrap;
+		margin: 0 -0.5em;
+	}
+
+	&__post {
+		-webkit-box-flex: 1;
+				  -ms-flex: 1 1 33.333%;
+				  		flex: 1 1 33.333%;
+	   -ms-flex-preferred-size: calc(33.333% - 24px);
+	   				 flex-basis: calc(33.333% - 24px);
+   	position: relative;
+   	display: inline-block;
+   	overflow: hidden;
+	   width: 100%;
+	   margin: 0 0.75em 1em;
+	   -webkit-transition: all 0.3s ease-in-out;
+	   	-moz-transition: all 0.3s ease-in-out;
+	   	  -o-transition: all 0.3s ease-in-out;
+				  transition: all 0.3s ease-in-out;
+
+		&__img {
+			display: -webkit-box;
+		   display: -ms-flexbox;
+		   display: flex;
+		   -webkit-box-align: center;
+		      -ms-flex-align: center;
+		         align-items: center;
+		   -webkit-box-pack: center;
+		      -ms-flex-pack: center;
+		    justify-content: center;
+
+			img {
+				max-width: none;
+				max-height: 300px;
+    			width: 130%;
+    			height: auto;
+			}
+
+		}
+
+		&__txt {
+			position: absolute;
+			top: 0;
+			right: 0;
+			left: 0;
+			bottom: 0;
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+			-webkit-box-align: center;
+			   -ms-flex-align: center;
+			      align-items: center;
+			-webkit-box-pack: center;
+			   -ms-flex-pack: center;
+			 justify-content: center;
+			flex-flow: column;
+			background: rgba(51,51,51,0.5);
+			color: $color-white;
+			text-align: center;
+			-webkit-transition: all 0.3s ease-in-out;
+				-moz-transition: all 0.3s ease-in-out;
+				  -o-transition: all 0.3s ease-in-out;
+					  transition: all 0.3s ease-in-out;
+
+				h2 {
+					margin: 0.25em 0;
+					border-bottom: 3px solid transparent;
+					font-family: 'VAGrounded', sans-serif;
+					-webkit-transition: all 0.3s ease-in-out;
+						-moz-transition: all 0.3s ease-in-out;
+						  -o-transition: all 0.3s ease-in-out;
+							  transition: all 0.3s ease-in-out;
+				}
+
+				p {
+					margin: 0.25em 0;
+				}
+
+		}
+
+		&:hover h2,
+		&:focus h2 {
+			border-bottom: 3px solid $color-orange;
+		}
+
+	}
+
+}
+
+
+
+@media all and (max-width: $h-tablet) { 
+	
+	.service {
+
+		&__post {
+			-webkit-box-flex: 1;
+				  -ms-flex: 1 1 50%;
+				  		flex: 1 1 50%;
+	   -ms-flex-preferred-size: calc(50% - 24px);
+	   				 flex-basis: calc(50% - 24px);
+		}
+
+	}
+
+}
+
+@media all and (max-width: $tablet) { 
+	
+	.service {
+
+		&__post {
+			
+			&__img {
+				
+				img {
+					width: 140%;
+				}
+
+			}
+
+		}
+
+	}
+
+}
+
+@media all and (max-width: 600px) {
+
+	.service {
+
+		&__post {
+			-webkit-box-flex: 1;
+				  -ms-flex: 1 1 100%;
+				  		flex: 1 1 100%;
+	   	-ms-flex-preferred-size: 100%;
+	   					 flex-basis: 100%;
+	   	margin: 0 0 1.5em;
+
+	   	&__img {	
+				
+				img {
+					width: 100%;
+				}
+
+			}
+
+			&__txt {
+				padding: 1em;
+			}
+
+		}
+
+	}
+
+}
