--- a/scss/import/_typography.scss
+++ b/scss/import/_typography.scss
@@ -38,11 +38,15 @@ body {
 	
 	a {
 		text-decoration: none;
-		-webkit-transition: .3s ease-in-out;
-				  transition: .3s ease-in-out;
+		-webkit-transition: all 0.3s ease-in-out;
+			-moz-transition: all 0.3s ease-in-out;
+			  -o-transition: all 0.3s ease-in-out;
+				  transition: all 0.3s ease-in-out;
 
-		&:hover{
-			text-decoration: underline;
+		&:hover,
+		&:focus {
+			text-decoration: none;
+			color: $color-orange;
 		}
 	}
 }
