--- a/style.css
+++ b/style.css
@@ -33,10 +33,13 @@ body {
     font-size: 20px; }
   body a {
     text-decoration: none;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out; }
-    body a:hover {
-      text-decoration: underline; }
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+    body a:hover, body a:focus {
+      text-decoration: none;
+      color: #ff5f00; }
 
 .header {
   width: 100%;
@@ -50,18 +53,43 @@ body {
     .header__logo a {
       color: #00a651; }
       .header__logo a h1 {
+        margin: 0;
+        display: flex;
+        align-items: center;
         letter-spacing: 0.05em; }
+        .header__logo a h1 img {
+          width: 100%;
+          max-width: 400px; }
   .header .nav__desktop {
     padding: 0;
     margin: 0; }
     .header .nav__desktop__toggle {
       display: none;
-      font-size: 22px; }
-    .header .nav__desktop__social li {
-      list-style: none;
+      font-size: 22px;
+      color: #00a651; }
+    .header .nav__desktop__social ul {
+      margin: 0.5em 0;
+      padding: 0;
       text-align: right;
-      padding: 0 0.25em; }
+      display: flex;
+      justify-content: flex-end; }
+      .header .nav__desktop__social ul li {
+        list-style: none;
+        text-align: right;
+        padding: 0 0.5em; }
+        .header .nav__desktop__social ul li a {
+          font-size: 30px;
+          color: #00a651;
+          -webkit-transition: all 0.3s ease-in-out;
+          -moz-transition: all 0.3s ease-in-out;
+          -o-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out; }
+          .header .nav__desktop__social ul li a:hover, .header .nav__desktop__social ul li a:focus {
+            color: #ff5f00; }
+        .header .nav__desktop__social ul li:last-child {
+          padding: 0 0 0 0.5em; }
     .header .nav__desktop__main ul {
+      margin: 0.5em 0;
       padding: 0;
       text-align: right;
       display: flex; }
@@ -76,91 +104,211 @@ body {
           text-decoration: none;
           text-align: right;
           font-size: 22px;
-          border-bottom: 3px solid transparent; }
-          .header .nav__desktop__main ul li a:hover, .header .nav__desktop__main ul li a:focus {
+          border-bottom: 3px solid transparent;
+          -webkit-transition: all 0.3s ease-in-out;
+          -moz-transition: all 0.3s ease-in-out;
+          -o-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out; }
+          .header .nav__desktop__main ul li a:hover, .header .nav__desktop__main ul li a:focus, .header .nav__desktop__main ul li a:active {
             border-bottom: 3px solid #ff5f00; }
-  @media (max-width: 700px) {
-    .header header.header {
-      padding: .2em 0 0.8em 0;
-      height: auto;
-      min-height: 100px; }
-      .header header.header .logo {
-        width: 60%; }
-        .header header.header .logo a h1 {
-          font-size: 2.5em;
-          margin: 0.3em 0; }
-      .header header.header .mobile-menu {
-        display: block;
-        float: right; }
-      .header header.header nav.nav {
-        width: 100%;
-        display: none;
-        margin: 0;
-        overflow: hidden; }
-        .header header.header nav.nav ul#main-menu {
-          position: relative;
-          left: 0;
-          margin: 4% 0; }
-          .header header.header nav.nav ul#main-menu li {
-            display: block;
-            padding: 0.2em 0;
-            line-height: 1.3;
-            text-align: center;
-            width: auto;
-            margin: 0; }
-            .header header.header nav.nav ul#main-menu li a {
-              font-size: 1.6em; } }
+        .header .nav__desktop__main ul li:last-child {
+          margin: 0 -0.25em 0 0;
+          padding: 0 0 0 0.25em; }
+      .header .nav__desktop__main ul .current-menu-item a {
+        border-bottom: 3px solid #ff5f00; }
+
+.nav__mobile {
+  display: none;
+  position: fixed;
+  float: left;
+  z-index: 99999;
+  top: 0;
+  bottom: 0;
+  left: 0px;
+  width: 300px;
+  background: #fff;
+  padding: 3em 0;
+  overflow-y: scroll;
+  direction: ltr;
+  -webkit-overflow-scrolling: touch;
+  transition: z-index 0s .2s linear, -webkit-transform .2s 0s ease-in-out;
+  transition: z-index 0s .2s linear, transform .2s 0s ease-in-out;
+  transition: z-index 0s .2s linear, transform .2s 0s ease-in-out, -webkit-transform .2s 0s ease-in-out; }
+  .nav__mobile__close {
+    position: relative;
+    float: right;
+    margin: -40px 20px 0;
+    font-size: 2rem;
+    color: #00a651; }
+  .nav__mobile__main ul {
+    margin: 0 0 1em;
+    padding: 0; }
+    .nav__mobile__main ul li {
+      padding: 1em 1em;
+      list-style: none; }
+      .nav__mobile__main ul li a {
+        padding: 0.25em 0;
+        font-family: 'VAGrounded', sans-serif;
+        color: #00a651;
+        text-decoration: none;
+        font-size: 22px;
+        border-bottom: 3px solid transparent;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
+        .nav__mobile__main ul li a:hover, .nav__mobile__main ul li a:focus {
+          border-bottom: 3px solid #ff5f00; }
+  .nav__mobile__social {
+    margin: 0.5em 0;
+    padding: 0 1em;
+    display: flex; }
+    .nav__mobile__social li {
+      padding: 0 1em;
+      list-style: none; }
+      .nav__mobile__social li a {
+        font-size: 30px;
+        color: #00a651;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
+        .nav__mobile__social li a:hover, .nav__mobile__social li a:focus {
+          color: #ff5f00; }
+      .nav__mobile__social li:first-child {
+        padding: 0 1em 0 0; }
+
+.nav__overlay {
+  display: none;
+  z-index: 9999;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #333333;
+  opacity: 0.5;
+  transition: z-index 0s .2s linear, opacity .2s 0s ease-in-out; }
 
 .footer {
   width: 100%;
   text-align: center;
   padding: 1em 0; }
   .footer__copy a {
+    margin: 0 0 0 -0.25em;
+    padding: 0.25em;
+    border-bottom: 3px solid transparent;
     color: #333333; }
+    .footer__copy a:hover, .footer__copy a:focus {
+      border-bottom: 3px solid #ff5f00;
+      color: #333333;
+      text-decoration: none; }
 
 @media all and (max-width: 1280px) {
-  header.header {
-    padding: 1.2em; } }
+  .header {
+    padding: 1.25em; }
+    .header .nav__mobile {
+      display: none; } }
+
+@media all and (max-width: 768px) {
+  .header .nav__desktop__toggle {
+    display: block; }
+  .header .nav__desktop__social {
+    display: none; }
+  .header .nav__desktop__main {
+    display: none; } }
+
+@media all and (max-width: 700px) {
+  .header__logo {
+    max-width: 250px; }
+    .header__logo a h1 {
+      font-size: 2rem; }
+      .header__logo a h1 img {
+        width: 100%; } }
 
 .inspirationWrap {
   text-align: center; }
+  .inspirationWrap__menu {
+    padding: 1em 0 2em; }
+    .inspirationWrap__menu ul {
+      margin: 0.5em 0;
+      padding: 0;
+      display: flex;
+      justify-content: center; }
+      .inspirationWrap__menu ul li {
+        list-style: none;
+        padding: 0 0.25em; }
+        .inspirationWrap__menu ul li a {
+          padding: 0.25em;
+          font-family: 'VAGrounded', sans-serif;
+          color: #00a651;
+          text-decoration: none;
+          text-align: right;
+          font-size: 20px;
+          border-bottom: 3px solid transparent;
+          -webkit-transition: all 0.3s ease-in-out;
+          -moz-transition: all 0.3s ease-in-out;
+          -o-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out; }
+          .inspirationWrap__menu ul li a:hover, .inspirationWrap__menu ul li a:focus, .inspirationWrap__menu ul li a:active {
+            border-bottom: 3px solid #ff5f00; }
+      .inspirationWrap__menu ul .current-menu-item a {
+        border-bottom: 3px solid #ff5f00; }
+  .inspirationWrap__categoryTitle {
+    display: none; }
   .inspirationWrap .inspiration {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 -0.5em; }
+    margin: 0 -0.75em; }
     .inspirationWrap .inspiration__article {
       flex: 1 1 25%;
       flex-basis: calc(25% - 24px);
       overflow: hidden;
       position: relative;
       width: 100%;
-      margin: 0 0.75em 1em;
+      margin: 0 0.75em 1.5em;
       -webkit-transition: all 0.3s ease-in-out;
       -moz-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out; }
       .inspirationWrap .inspiration__article__img {
         max-height: 300px;
-        overflow: hidden; }
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center; }
         .inspirationWrap .inspiration__article__img img {
-          width: 150%;
+          width: 135%;
           height: auto; }
+      .inspirationWrap .inspiration__article__meta {
+        margin: 0.5em 0;
+        text-align: left;
+        max-height: 22px;
+        overflow: hidden; }
       .inspirationWrap .inspiration__article h2 {
         margin: .1em 0 .2em;
         width: 100%;
         font-size: 20px;
         font-family: 'VAGrounded';
-        text-align: left; }
+        text-align: left;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
       .inspirationWrap .inspiration__article a {
         color: #333333;
         text-decoration: none;
         transition: 100ms all ease-in; }
+      .inspirationWrap .inspiration__article:hover h2,
+      .inspirationWrap .inspiration__article:focus h2 {
+        color: #ff5f00; }
   .inspirationWrap .pagination {
-    text-align: center; }
+    text-align: center;
+    margin: 1em 0; }
     .inspirationWrap .pagination .page-numbers {
-      padding: .5% 1%; }
+      padding: 0.5em; }
     .inspirationWrap .pagination .current {
-      font-weight: 700; }
+      font-weight: 600; }
 
 @media all and (max-width: 1024px) {
   .inspirationWrap .inspiration__article {
@@ -175,11 +323,181 @@ body {
       width: 125%; } }
 
 @media all and (max-width: 600px) {
+  .inspirationWrap__menu {
+    padding: 1em 0; }
+    .inspirationWrap__menu ul {
+      flex-wrap: wrap; }
+      .inspirationWrap__menu ul li {
+        padding: 0.5em 0.25em; }
   .inspirationWrap .inspiration__article {
     flex: 1 1 100%;
     flex-basis: calc(100%); }
-    .inspirationWrap .inspiration__article__img img {
-      width: 100%; } }
+    .inspirationWrap .inspiration__article__img {
+      max-height: none; }
+      .inspirationWrap .inspiration__article__img img {
+        width: 100%; } }
+
+.service {
+  text-align: center; }
+  .service__postwrapper {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -0.5em; }
+  .service__post {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 33.333%;
+    flex: 1 1 33.333%;
+    -ms-flex-preferred-size: calc(33.333% - 24px);
+    flex-basis: calc(33.333% - 24px);
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    width: 100%;
+    margin: 0 0.75em 1em;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+    .service__post__img {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; }
+      .service__post__img img {
+        max-width: none;
+        max-height: 300px;
+        width: 130%;
+        height: auto; }
+    .service__post__txt {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      flex-flow: column;
+      background: rgba(51, 51, 51, 0.5);
+      color: #fff;
+      text-align: center;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out; }
+      .service__post__txt h2 {
+        margin: 0.25em 0;
+        border-bottom: 3px solid transparent;
+        font-family: 'VAGrounded', sans-serif;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
+      .service__post__txt p {
+        margin: 0.25em 0; }
+    .service__post:hover h2,
+    .service__post:focus h2 {
+      border-bottom: 3px solid #ff5f00; }
+
+@media all and (max-width: 1024px) {
+  .service__post {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 50%;
+    flex: 1 1 50%;
+    -ms-flex-preferred-size: calc(50% - 24px);
+    flex-basis: calc(50% - 24px); } }
+
+@media all and (max-width: 768px) {
+  .service__post__img img {
+    width: 140%; } }
+
+@media all and (max-width: 600px) {
+  .service__post {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 100%;
+    flex: 1 1 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    margin: 0 0 1.5em; }
+    .service__post__img img {
+      width: 100%; }
+    .service__post__txt {
+      padding: 1em; } }
+
+.start__welcome {
+  max-height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative; }
+  .start__welcome img {
+    width: 100%;
+    height: auto; }
+  .start__welcome__txt {
+    padding: 1em;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    background: rgba(0, 0, 0, 0.2);
+    text-align: center; }
+    .start__welcome__txt h1 {
+      margin: 0 0 0.5em;
+      max-width: 700px;
+      color: #fff;
+      text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5); }
+    .start__welcome__txt p {
+      max-width: 700px;
+      color: #fff;
+      text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5); }
+
+.start__inputLink {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -0.5em;
+  padding: 4em 0; }
+  .start__inputLink a {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 33.333%;
+    flex: 1 1 33.333%;
+    -ms-flex-preferred-size: calc(33.333% - 24px);
+    flex-basis: calc(33.333% - 24px);
+    flex-flow: column;
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    width: 100%;
+    margin: 0 0.75em 1em;
+    text-align: center;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+    .start__inputLink a img {
+      width: 60px; }
+    .start__inputLink a h2 {
+      font-size: 25px; }
+    .start__inputLink a p {
+      margin: 0 auto;
+      max-width: 380px;
+      text-align: center; }
 
 .page__img {
   overflow: hidden;
@@ -197,7 +515,9 @@ body {
 
 .single__img {
   overflow: hidden;
-  max-height: 600px; }
+  max-height: 600px;
+  display: flex;
+  align-items: center; }
   .single__img img {
     width: 100%;
     height: auto; }
@@ -207,6 +527,10 @@ body {
   max-width: 700px;
   width: 100%; }
   .single__txt h1 {
+    text-align: center; }
+  .single__txt__meta {
+    text-align: center; }
+  .single__txt__description {
     text-align: center; }
 
 .container h1.title {
