--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,4 +42,38 @@ body {
 
 	}
 
+	.error {
+		max-width: 700px;
+		margin: 0 auto;
+		padding: 4em 0;
+		text-align: center;
+
+		h1 {
+			margin: 0.1em 0;
+    		font-size: 6.5rem;
+		}
+
+		a {
+			display: block;
+		   max-width: 250px;
+		   margin: 2em auto 0;
+    		padding: 0.5em 4em;
+			background-color: $color-orange;
+			border-radius: 4px;
+			font-size: 20px;
+			color: #FFFFFF!important;
+			-webkit-transition: all 0.3s ease-in-out;
+		   	-moz-transition: all 0.3s ease-in-out;
+		   	  -o-transition: all 0.3s ease-in-out;
+					  transition: all 0.3s ease-in-out;
+
+			&:hover, 
+			&:focus {
+				background-color: $color-green;
+			}
+
+		}
+
+	}
+
 }
