--- a/scss/import/_inspiration.scss
+++ b/scss/import/_inspiration.scss
@@ -117,6 +117,15 @@
 	.pagination {
 		text-align: center;
 		margin: 1em 0;
+
+		a {
+			color: $color-gray;
+		}
+
+		a:hover,
+		a:focus {
+			color: $color-orange;
+		}
 			
 		.page-numbers {
 			padding: 0.5em;
