--- a/scss/import/_typography.scss
+++ b/scss/import/_typography.scss
@@ -37,6 +37,7 @@ body {
 	}
 	
 	a {
+		color: $color-gray;
 		text-decoration: none;
 		-webkit-transition: all 0.3s ease-in-out;
 			-moz-transition: all 0.3s ease-in-out;
